stderr
JudgeMan.java:42: error: illegal start of expression
        int[] intArray = [5];
                         ^
1 error
